--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<aspectj.version>1.9.5</aspectj.version>
-		<spring.version>5.2.2.RELEASE</spring.version>
+		<aspectj.version>1.9.8.RC3</aspectj.version>
+		<spring.version>5.3.14</spring.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
